@@ -1,3 +1,8 @@
+2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* include/stdlib.h: rename DTOSTRE_* into DTOSTR_*.
+	* libm/fplib/dtostre.S: rename DTOSTRE_* into DTOSTR_*.
+
 2002-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/stdlib.h: document this file.
